--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="search_product">Search for products</string>
     <string name="categories">Categories</string>
 
+    <string name="app_name2">All Categories</string>
 
     <string name="app_name4">ToolbarSearchview</string>
     <string-array name="months_array">
