--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,10 @@
     <string name="use_location">Use my location</string>
     <string name="search_product">Search for products</string>
     <string name="categories">Categories</string>
+    <string name="saver">Top Savers Today</string>
 
     <string name="app_name2">All Categories</string>
+    <string name="see_all">See all</string>
 
     <string name="app_name4">ToolbarSearchview</string>
     <string-array name="months_array">
