--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
 
     <string name="app_name2">All Categories</string>
     <string name="see_all">See all</string>
-    <string name="blockbasterl">SBlock Baster Sale</string>
+    <string name="blockbasterl">Block Baster Sale</string>
 
     <string name="app_name4">ToolbarSearchview</string>
     <string-array name="months_array">
