--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,10 @@
     <string name="gets">and get 250 WinWin points</string>
     <string name="ok">OK, GOT IT</string>
     <string name="select">Select a plan which suits your needs</string>
+    <string name="happy">Happy Bachat Club Member</string>
+    <string name="good">"Good discount through Bachat Club.we are saving approx. 600 on a purchase of around 4000 in a month"</string>
+
+
 
 
 
